<resources>
    <string name="app_name">TwoWayDataBindingLoginSignup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="user_name">Enter User Name</string>
    <string name="password">Enter Password</string>
    <string name="not_a_member">Not a member? <b>Signup Now</b></string>
    <string name="registration">Registration</string>
    <string name="a_member">"Already a member?<b> Login hear</b>"</string>
    <string name="full_name">Enter full name</string>
    <string name="email">"Enter email"</string>
    <string name="mobileno">Enter mobile number</string>
    <string name="cnf_password">Enter confirm password</string>
    <string name="signup">Signup</string>
    <string name="welcome">Welcome To Home Screen</string>
</resources>